Refactor password change route
